<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:id="@+id/child_avatar"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avatar_1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/child_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="4dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_nickname"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/child_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/child_name"
            android:paddingLeft="4dp"
            android:paddingRight="10dp"
            android:text="@string/sign"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/is_online"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/is_online"
            android:textSize="16sp"
            android:paddingTop="4dp"
            android:layout_above="@+id/child_sign"
            android:layout_toRightOf="@+id/child_name"
            android:layout_toEndOf="@+id/child_name" />
    </RelativeLayout>

</LinearLayout>
