<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_info_detail_background">

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:background="@color/color_white_background">-->

        <!--<Button-->
            <!--android:id="@+id/back_button"-->
            <!--android:background="@drawable/back_button"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:clickable="true" />-->

        <!--<TextView-->
            <!--android:text="@string/detail_information"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginLeft="80dp"-->
            <!--android:gravity="center_vertical"-->

            <!--android:textSize="24sp"-->
            <!--android:paddingLeft="60dp"-->
            <!--android:paddingRight="20dp"-->
            <!--tools:ignore="RtlSymmetry" />-->
    <!--</RelativeLayout>-->
    <com.scut.itpm.umo.core.Main.NavBar.NavBarView
        android:id="@+id/id_user_info_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bar_height"></com.scut.itpm.umo.core.Main.NavBar.NavBarView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/color_white_background">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="19dp"
            android:src="@drawable/avatar_1"
            android:layout_marginStart="19dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_toRightOf="@+id/user_avatar"
            android:layout_marginTop="10dp">


            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/user_nickname"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"/>

            <TextView
                android:id="@+id/id_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="ID: "
                android:layout_centerVertical="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/user_id"
                android:layout_toRightOf="@+id/id_text"
                android:layout_below="@+id/user_nickname"
                />

            <Button
                android:id="@+id/remark_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/remark"
                android:textColor="@color/color_text_remark"
                android:background="@drawable/remark_border"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@color/color_white_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/detail_info_margin_left"
                android:text="特点"/>

            <TextView
                android:id="@+id/characteristic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_centerVertical="true"
                android:text="温柔" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/detail_info_margin_left"
                android:text="地区"/>

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="90dp"
                android:text="广州"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="@dimen/detail_info_margin_left"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="个人空间"/>

            <ImageView
                android:id="@+id/photo_1"
                android:src="@drawable/photo_1"
                android:scaleType="fitXY"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <ImageView
                android:id="@+id/photo_2"
                android:src="@drawable/photo_2"
                android:scaleType="fitXY"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <ImageView
                android:id="@+id/photo_3"
                android:src="@drawable/photo_3"
                android:scaleType="fitXY"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/detail_info_margin_left"
                android:text="评价"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="90dp"
                android:text=""/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/detail_info_margin_left"
                android:text="更多"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/sending_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sending_message"
            android:background="@drawable/sending_button"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.Button.Colored" />
    </RelativeLayout>

</LinearLayout>
